[metadata]
name = PSF_Py
version = 0.3
author = Mayur Shende, Neeraj Bokde
author_email = mayur.k.shende@gmail.com, neerajdhanraj@gmail.com
description = PSF: Pattern Sequence-based Forecasting (PSF) algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/Mayur1009/PSF_Py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas
    numpy
    scikit-learn
    matplotlib

[options.packages.find]
where = src